--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     />
   </head>
   <body>
+    <div class="wrapper">
     <div class="div">
       <div class="wrapper">
         <header class="header">
@@ -643,6 +644,7 @@
           </div>
         </div>
       </footer>
+    </div>
     </div>
   </body>
 </html>
