--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap"
     />
   </head>
+  <style>
+.content {
+    max-width: 500px;
+    margin: auto;
+}
+</style>
   <body>
-    <div class="wrapper">
+    <div class="content">
     <div class="div">
       <div class="wrapper">
         <header class="header">
